k8s/longhorn/longhorn-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ui
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
  namespace: longhorn-system
spec:
  rules:
    - host: longhorn.adair.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
  tls:
    - secretName: longhorn-ui-tls
